--- a/client/app/layout/center.component.html
+++ b/client/app/layout/center.component.html
@@ -1,3 +1,3 @@
-<div class="container" style="width: 90%; padding-top: 60px;">
+<div class="container" style="padding-top: 50px;">
 <router-outlet></router-outlet>
 </div>
