ReadBoard search box UI almost finalize, ouhhhh...

--- a/client/app/security/authentication.component.html
+++ b/client/app/security/authentication.component.html
@@ -1,6 +1,6 @@
 
 
-
+<div style="margin-top: 5%;">
 <form *ngIf="login" id="loginForm" (ngSubmit)="onLogin(loginForm)" #loginForm="ngForm">
         <div class="modal-content">
             <div class="modal-header" >               
@@ -72,3 +72,5 @@
     </div>
       
 </form>
+    
+</div>
