--- a/client/app/layout/center.component.html
+++ b/client/app/layout/center.component.html
@@ -1,3 +1,3 @@
-<div class="container" style="padding-top: 50px;">
+<div style="padding-top: 60px; margin-left: 10%; margin-right: 10%;">
 <router-outlet></router-outlet>
 </div>
