--- a/client/app/readboard/readboard.component.html
+++ b/client/app/readboard/readboard.component.html
@@ -1,38 +1,35 @@
 
-<div class="container">
-      <div class="affix">
-          <form id="Form" >
+<div class="affix" style="margin-top: -9px; margin-left: -10%; background-color: white; border-bottom-style: ridge; border-bottom-width: 1;">
+    <form id="Form" style="padding-top: 8px; padding-left: 9%;">
         <div class="input-group" >
-            
             <input type="text" class="form-control" placeholder="Search for...">
             <div class="input-group-btn">
                 <button class="btn btn-default" type="button">Go!</button>
             </div>
-            <div style="float: left;">
-                &nbsp;<span class="glyphicon glyphicon-filter" (click)="toggleAdvanceSearch()" style="font-size: 20px; cursor: pointer;"></span>
+            <div style="float: left;" data-toggle="tooltip" title="More filters!">
+                &nbsp;<span class="glyphicon glyphicon-menu-hamburger" (click)="toggleAdvanceSearch()" style="font-size: 20px; cursor: pointer;"></span>
             </div>
         </div>
-              
+
         <div [hidden]=!showAdvanceSearch>
             <div>
                 Advance search options!
             </div> 
         </div>
-        </form>
-    </div>
+    </form>
 </div>
-    
-    
-    <div id="readList" style="margin-top: 50px;" (window:scroll)="onScroll()">
-        <div style="margin-bottom: 5px;" class="panel panel-primary" *ngFor="#story of stories">
-             <div class="panel-heading" style="height: 30px; padding-top: 9px;">
-                <span style="font-family: sans-serif; font-size: small; font-weight: bold">{{story.title}}</span>
-                <span style="float: right; font-family: sans-serif; font-size: smaller;">{{story.createdDate}}</span>
-            </div>
-            <div class="panel-body" style="font-family: sans-serif; font-size: small; font-weight: bold">{{story.storyShortDescription}}</div>
-            <div class="panel-footer" style="height: 20px; padding-top: 0">
-                <span style="font-family: sans-serif; font-size: small; font-weight: bold;">{{story.likes}}</span>
-                <span style="font-family: sans-serif; font-size: small; font-weight: bold">{{story.disLikes}}</span>
-            </div>
+
+
+<div id="readList" style="margin-top: 50px;" (window:scroll)="onScroll()">
+    <div style="margin-bottom: 5px;" class="panel panel-primary" *ngFor="#story of stories">
+         <div class="panel-heading" style="height: 30px; padding-top: 9px;">
+            <span style="font-family: sans-serif; font-size: small; font-weight: bold">{{story.title}}</span>
+            <span style="float: right; font-family: sans-serif; font-size: smaller;">{{story.createdDate}}</span>
+        </div>
+        <div class="panel-body" style="font-family: sans-serif; font-size: small; font-weight: bold">{{story.storyShortDescription}}</div>
+        <div class="panel-footer" style="height: 20px; padding-top: 0">
+            <span style="font-family: sans-serif; font-size: small; font-weight: bold;">{{story.likes}}</span>
+            <span style="font-family: sans-serif; font-size: small; font-weight: bold">{{story.disLikes}}</span>
         </div>
     </div>
+</div>
