--- a/client/app/writeboard/writeboard.component.html
+++ b/client/app/writeboard/writeboard.component.html
@@ -1,9 +1,8 @@
-<div style="margin-top: 3%; width: 100%; height: 900px;" >
+<div style="margin-top: 3%; width: 100%;" >
     <!--<textarea name="area3" style="width: inherit; height: inherit;">
         
     </textarea>-->
     <div id="editor">
-        <h1>Hello world!</h1>
-        <p>I'm an instance of <a href="http://ckeditor.com">CKEditor</a>.</p>
+        
     </div>
 </div>
