Writeboard editor sizing and header added

--- a/client/app/writeboard/writeboard.component.html
+++ b/client/app/writeboard/writeboard.component.html
@@ -1,7 +1,5 @@
-<div style="margin-top: 3%; width: 100%;" >
-    <!--<textarea name="area3" style="width: inherit; height: inherit;">
-        
-    </textarea>-->
+<div style="width: 100%;" >
+    <h1>Write your story</h1>
     <div id="editor">
         
     </div>
