--- a/client/app/writeboard/writeboard.component.html
+++ b/client/app/writeboard/writeboard.component.html
@@ -1,6 +1,18 @@
 <div style="width: 100%;" >
-    <h1>Write your story</h1>
-    <div id="editor">
-        
-    </div>
+    <form id="loginForm">
+        <h3><strong>Write your story</strong></h3>
+        <div class="form-group">
+            <label for="topicTitle">Title:</label>
+            <input type="text" class="form-control" id="topicTitle" required/>
+        </div>
+
+        <div id="editor"></div>    
+
+        <div class="form-group">
+            <label for="topicSearchTags">Search Tags:</label>
+            <textarea class="form-control" id="topicSearchTags" required></textarea>
+        </div>
+
+        <button type="submit" class="btn btn-primary" style="float: right;">Publish</button>
+    </form>
 </div>
