--- a/client/app/readboard/readboard.component.html
+++ b/client/app/readboard/readboard.component.html
@@ -1,6 +1,6 @@
 
-<div class="affix" style="margin-top: -9px; margin-left: -10%; background-color: white; border-bottom-style: ridge; border-bottom-width: 1;">
-    <form id="Form" style="padding-top: 8px; padding-left: 9%;">
+<div class="affix" style="width: 80.1%; background-color: white; border-bottom-style: ridge; border-bottom-width: 1;">
+    <form id="Form" style="padding-top: 8px; width: 109%;">
         <div class="input-group" >
             <input type="text" class="form-control" placeholder="Search for...">
             <div class="input-group-btn">
