--- a/client/app/readboard/readboard.component.html
+++ b/client/app/readboard/readboard.component.html
@@ -23,10 +23,10 @@
 <div id="readList" style="margin-top: 50px;" (window:scroll)="onScroll()">
     <div style="margin-bottom: 5px;" class="panel panel-primary" *ngFor="#story of stories">
          <div class="panel-heading" style="height: 30px; padding-top: 9px;">
-            <span style="font-family: sans-serif; font-size: small; font-weight: bold">{{story.title}}</span>
+            <span style="font-family: sans-serif; font-size: small; font-weight: bold; cursor: pointer;" (click)="openStory(story.storyId)">{{story.title}}</span>
             <span style="float: right; font-family: sans-serif; font-size: smaller;">{{story.createdDate}}</span>
         </div>
-        <div class="panel-body" style="font-family: sans-serif; font-size: small; font-weight: bold">{{story.storyShortDescription}}</div>
+        <div class="panel-body" style="font-family: sans-serif; font-size: small; font-weight: bold; cursor: pointer;" (click)="openStory(story.storyId)">{{story.storyShortDescription}}</div>
         <div class="panel-footer" style="height: 20px; padding-top: 0">
             <span style="font-family: sans-serif; font-size: small; font-weight: bold;">{{story.likes}}</span>
             <span style="font-family: sans-serif; font-size: small; font-weight: bold">{{story.disLikes}}</span>
