--- a/client/app/storyboard/storyboard.component.html
+++ b/client/app/storyboard/storyboard.component.html
@@ -1,5 +1,5 @@
 <div style="margin-top: 5%;">
-    <div>
-        Story Board {{storyId}}
+    <div [innerHTML]="story?.content">
+        
     </div>
 </div>
